src/test/ui/syntax-trait-polarity-feature-gate.stderr
error[E0658]: negative trait bounds are not yet fully implemented; use marker types for now
  --> $DIR/syntax-trait-polarity-feature-gate.rs:7:6
   |
LL | impl !Send for TestType {}
   |      ^^^^^
   |
   = note: see issue #68318 <https://github.com/rust-lang/rust/issues/68318> for more information
   = help: add `#![feature(negative_impls)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
